--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "mongoose": "^6.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    
+    "start": "node server.js",
+    "dev": "nodemon app.js"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +34,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/huan00/ecommerce_store.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/huan00/ecommerce_store/issues"
+  },
+  "homepage": "https://github.com/huan00/ecommerce_store#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
